--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,113 @@
+@use "partials";
+
+@import "_partials";
 *{
+    @include partials.headings;
+    @include partials.p;
+}
+
+/* General styling */ 
+body {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    font-family: $body-font;
+    font-weight: $font-weight;
+    background-color: $bg-color;
+}
+
+/* Typgraphy */
+h1, h2, h3, h4 {
+    @include headings;
+}
+
+h1 {
+    font-size: 54px;
+}
+h2 {
+    font-size: 40px;
+}
+h3 {
+    font-size: 36px;
+}
+
+h4 {
+    font-size: 20px;
+}
+
+p {
+    @include p;
+}
+
+
+.kategorinavne p {
+    font-size: 24px;
+    font-family: "lora";
+
+}
+
+/* Header */ 
+header {
+    background-color: rgb(36, 92, 127,1);
+    height: 8em;
+    padding: 0 4em 0 4em;
+    display: grid; 
+    justify-content: space-between;
+    grid-template-columns: 1fr 60px 0 1fr;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 1000; /* Gør, at headeren vises over andet indhold */
+    transition: 0.3s ease;
+    max-height: fit-content;
+    width: 100%;
+}
+
+header img {
+    width: auto;
+    height: 100%;
+    padding: 10%;
+}
+
+.logo {
+    grid-column: 2; /* logoet er i kolonne 2 (midten) */
+    max-height: 30px;
+     }
+
+header li {
    
+    position: relative;
+    padding-left: 1em;
+    padding-right: 1em;
+} 
+
+header li a {
+    color: #ffff;
+    text-decoration: none;
+    justify-content: space-around;
+    position: relative;
+    transition: 0.3s ease;
+    white-space: nowrap;
+}
+
+nav ul {
+    display: none;
+    color: white;
+    flex-direction: column;    
+}
+
+header .fa-solid.fa-bars {
+    font-size: 2em;
+    background-color: transparent; 
+    border: none;
+    padding: 10px;
+}
+
+.fa-bars {
+    color: white;
+    font-size: 200%;
+    cursor: pointer;
+    position: absolute;
+    left: 2rem;
+    transform: translateY(-50%);
 }
