Change textcolor in hamburgermenu

--- a/_partials.scss
+++ b/_partials.scss
@@ -9,7 +9,7 @@
 $bg-color: #F2EEEB;
 $nav-color: #000000; 
 $footer-color: #F2EEEB;
-$text-color: #000000;
+$text-color: #ffffff;
 
 /* Typography */
 $heading-font: 'Lora', serif;
