--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 body {
   font-family: "Lora", serif;
   font-weight: 600;
-  color: #000000;
+  color: #ffffff;
   text-transform: uppercase; /* Dét at style med uppercase i CSS og ikke blot skrive stort i HTML, gør at screen readers ikke blot læser de enkelte bogstaver op. F.eks. bliver WEB til W.E.B. når det læses op af en screen reader, men når man styler det i (S)CSS, bliver det til WEB */
   font-family: "Roboto", sans-serif;
   font-weight: 400; /* Regular */
@@ -37,7 +37,7 @@ body {
 h1, h2, h3, h4 {
   font-family: "Lora", serif;
   font-weight: 600;
-  color: #000000;
+  color: #ffffff;
   text-transform: uppercase; /* Dét at style med uppercase i CSS og ikke blot skrive stort i HTML, gør at screen readers ikke blot læser de enkelte bogstaver op. F.eks. bliver WEB til W.E.B. når det læses op af en screen reader, men når man styler det i (S)CSS, bliver det til WEB */
 }
 
@@ -107,7 +107,7 @@ nav ul {
 .kategorinavne {
   font-family: "Lora", serif;
   font-weight: 700; /* Bold */
-  color: #000000;
+  color: #ffffff;
   font-size: 24px;
 }
 
@@ -126,8 +126,8 @@ nav a:hover {
   --bar-width: 60px;
   --bar-height: 8px;
   --hamburger-gap:6px;
-  --foreground:#527C68;
-  --background:#000000;
+  --foreground:#A59B92;
+  --background:#ffffff;
   --hamburger-margin: 20px;
   --animation-timing: 200ms ease-in-out;
   --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
@@ -148,7 +148,7 @@ nav a:hover {
 }
 
 .hamburgermenu:has(input:checked) {
-  --foreground: #000000;
+  --foreground: #ffffff;
 }
 
 .hamburgermenu:has(input:focus-visible)::before,
